--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="col-md-4 ">
                         <div class="balance status">
                             <h5>Balance</h5>
-                            <h2>$1240</h2>
+                            <h2>$<span id="currentBalance">1240</span></h2>
                         </div>
                     </div>
                 </div>
@@ -83,14 +83,18 @@
             const depositAmount = document.getElementById("depositAmout").value;
             const depositNumber = parseFloat(depositAmount);
 
-            const currentDeposit = document.getElementById("currentDeposit").innerText;
-            const currentDepositNumber = parseFloat(currentDeposit);
-            const totalDeposit = depositNumber + currentDepositNumber;
+            updateSpanText("currentDeposit",depositNumber);
+            updateSpanText("currentBalance",depositNumber);
 
-            document.getElementById("currentDeposit").innerText = totalDeposit;
             document.getElementById("depositAmount").value = "";
 
         })
+        function updateSpanText(id, depositNumber) {
+            const current = document.getElementById(id).innerText;
+            const currentNumber = parseFloat(current);
+            const totalAmount = depositNumber + currentNumber;
+            document.getElementById(id).innerText = totalAmount;
+        }
     </script>
 </body>
 </html>
