--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="col-md-4">
                         <div class="withdraw status">
                             <h5>Withdraw</h5>
-                            <h2>$00</h2>
+                            <h2>$<span id="currentWithdraw">00</span></h2>
                         </div>
                     </div>
                     <div class="col-md-4 ">
@@ -58,9 +58,9 @@
                     <div class="col-md-6">
                         <div class="login-area">
                             <h4>Withdraw</h4>
-                            <input type="text" class="form-control" placeholder="$ amount you want to withdraw">
+                            <input type="text" id="withDrawAmount" class="form-control" placeholder="$ amount you want to withdraw">
                             <br>
-                            <button class="btn btn-success" id="">Withdraw</button>
+                            <button class="btn btn-success" id="addWithDraw">Withdraw</button>
                         </div>
                     </div>
                 </div>
@@ -80,8 +80,7 @@
         //deposit button event handler
         const depositBtn = document.getElementById("addDeposit");
         depositBtn.addEventListener("click", function () {
-            const depositAmount = document.getElementById("depositAmout").value;
-            const depositNumber = parseFloat(depositAmount);
+            const depositNumber = getInputNumber("depositAmount");
 
             updateSpanText("currentDeposit",depositNumber);
             updateSpanText("currentBalance",depositNumber);
@@ -89,6 +88,20 @@
             document.getElementById("depositAmount").value = "";
 
         })
+
+        //withraw button event handler
+        const withdrawBtn = document.getElementById("addWithDraw");
+        withdrawBtn.addEventListener("click", function () {
+           const withdrawNumber = getInputNumber("withDrawNumber");
+           console.log(withdrawNumber);
+        })
+
+        function getInputNumber(id) {
+            const amount = document.getElementById(id).value;
+            const amountNumber = parseFloat(amount);
+            return amountNumber;
+        }
+
         function updateSpanText(id, depositNumber) {
             const current = document.getElementById(id).innerText;
             const currentNumber = parseFloat(current);
